--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
     "@hookform/resolvers": "^2.7.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-navigation/bottom-tabs": "^6.0.0",
     "@react-navigation/native": "^6.0.0",
     "expo": "~41.0.1",
@@ -17,6 +18,7 @@
     "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
+    "intl": "^1.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.12.2",
@@ -27,6 +29,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-unimodules": "~0.13.3",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
     "yup": "^0.32.9"
